Se soluciona errores identificados por SonaQube para alinear el codigo a las mejores practicas